--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,15 @@
 body {
   font-size: 16px;
-  color:rgb(39, 38, 38);
-  background-color: white;
+  color: rgb(39, 38, 38);
+  background-color: #fafafa;
   font-family: 'Oxygen', sans-serif;
 }
 
 /** HEADER **/
 #header-nav {
-  background-color: #d2d2d2;
-  border: 4px solid black;
+  background-color: #b8b7b3;
   border-radius: 0;
+  border: 2px solid black;
 }
 
 .navbar-brand {
@@ -30,15 +30,6 @@ body {
 .navbar-brand a:hover, .navbar-brand a:focus {
   text-decoration: none;
 }
-.navbar-brand p { /* Kosher cert */
-  color: #000;
-  text-transform: uppercase;
-  font-size: .7em;
-  margin-top: 15px;
-}
-.navbar-brand p span { /* Star-K */
-  vertical-align: middle;
-}
 
 #nav-list {
   margin-top: 10px;
@@ -46,9 +37,6 @@ body {
 #nav-list a {
   color: rgb(39, 38, 38);
   text-align: center;
-  font-weight: bold;
-  font-size: x-large;
-  padding-top: 0;
 }
 #nav-list a:hover {
   background: #E7E7E7;
@@ -80,6 +68,9 @@ body {
 /* END HEADER */
 
 
+/* END HOME PAGE */
+
+
 /********** Extra small devices only **********/
 @media (max-width: 767px) {
   /* Header */
@@ -91,14 +82,6 @@ body {
     padding-top: 10px;
     font-size: 5vw; /* 1vw = 1% of viewport width */
   }
-  .navbar-brand p { /* Kosher cert */
-    font-size: .6em;
-    margin-top: 12px;
-  }
-  .navbar-brand p img { /* Star-K */
-    height: 20px;
-  }
-
   #collapsable-nav a { /* Collapsed nav menu text */
     font-size: 1.2em;
   }
@@ -113,8 +96,8 @@ body {
     margin: 0 20px;
     padding: 10px;
     border: 2px solid #fff;
-    background-color: rgb(129, 129, 129);
-    color: rgb(39, 38, 38);
+    background-color: #f6b319;
+    color: #951c49;
   }
   #xs-deliver {
     margin-top: 5px;
